--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      #- uses: nrwl/nx-set-shas@v2
+      - uses: nrwl/nx-set-shas@v2
       - run: npm ci
 
       - run: npx nx workspace-lint
