build: remove --all flag from nx commands

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - run: npm ci
 
       - run: npx nx workspace-lint
-      - run: npx nx format:check --all
-      - run: npx nx affected --target=lint --parallel=3 --all
-      - run: npx nx affected --target=test --parallel=3 --ci --code-coverage --all
-      - run: npx nx affected --target=build --parallel=3 --all
+      - run: npx nx format:check
+      - run: npx nx affected --target=lint --parallel=3
+      - run: npx nx affected --target=test --parallel=3 --ci --code-coverage
+      - run: npx nx affected --target=build --parallel=3
