--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: "CI"
 on:
   push:
     branches:
@@ -7,6 +7,7 @@ on:
 
 jobs:
   main:
+    name: "Format, Lint, Test, Build"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
