feat: make no-old-deps DDD friendly and node_modules friendly (#2)
* feat: make no-old-deps DDD friendly and node_modules friendly

* chore: remove test folders

* chore: format

Co-authored-by: Tomasz Kasa Kasowicz <tomaszk@backbase.com>

--- a/packages/eslint-plugin-no-old-dependencies/package.json
+++ b/packages/eslint-plugin-no-old-dependencies/package.json
@@ -1,13 +1,9 @@
 {
   "name": "@bb-cli/eslint-plugin-no-old-dependencies",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "type": "commonjs",
   "description": "Plugin to validate dependencies in journey",
-  "keywords": [
-    "eslint",
-    "eslintplugin",
-    "eslint-plugin"
-  ],
+  "keywords": ["eslint", "eslintplugin", "eslint-plugin"],
   "author": {
     "name": "Backbase"
   },
