--- a/packages/eslint-plugin-no-old-dependencies/package.json
+++ b/packages/eslint-plugin-no-old-dependencies/package.json
@@ -3,11 +3,7 @@
   "version": "0.2.0",
   "type": "commonjs",
   "description": "Plugin to validate dependencies in journey",
-  "keywords": [
-    "eslint",
-    "eslintplugin",
-    "eslint-plugin"
-  ],
+  "keywords": ["eslint", "eslintplugin", "eslint-plugin"],
   "author": {
     "name": "Backbase"
   },
